# unified-ai-api

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test_api.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: CODE_EXPLANATION.md  GITHUB_SETUP.md  TESTING_GUIDE.md
frontend/: index.html
src/unified_ai/: config.py  main.py
src/unified_ai/api/: schemas.py
src/unified_ai/api/routes/: completion.py  health.py
src/unified_ai/core/: __init__.py  fallback.py  llm_client.py  products.py
src/unified_ai/core/providers/: __init__.py  gemini.py  groq.py  openai.py
src/unified_ai/storage/: session.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_llm_client.py  test_products.py
